Implement dirty based on equality